k8s/ingress-srv.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  rules:
    - host: codeplus.dev
      http:
        paths:
          - path: /(api/auth|auth)/?(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: auth-serv
                port:
                  number: 3000
          - path: /auth/_next/(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: auth-serv
                port:
                  number: 3000
          - path: /
            pathType: Prefix
            backend:
              service:
                name: client-srv
                port:
                  number: 3000
  ingressClassName: nginx
